Se intenta arregrlar buildeo de tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,5 @@ project(TEST_RUNNER)
 add_subdirectory(tests)
 include(GoogleTest)
 enable_testing()
-gtest_discover_tests(test_g DISCOVERY_MODE PRE_TEST)
+#gtest_discover_tests(test_g DISCOVERY_MODE PRE_TEST)
 #add_test(NAME TESTING COMMAND $<TARGET_FILE:test_g>)
