Pantalla de inicio agregada

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ add_executable(editor "editor/main.cpp")
 
 # Va a haber otro ejecutable para el editor.
 target_link_libraries(server server_lib box2d)
-target_link_libraries(client client_lib ${SDL2PP_LIBRARIES})
+target_link_libraries(client client_lib ${SDL2PP_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${Qt5Core_LIBRARIES})
 target_link_libraries(editor editor_lib ${Qt5Widgets_LIBRARIES} ${Qt5Core_LIBRARIES})
 
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
