--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,13 +10,24 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
+file(GLOB_RECURSE SERVER ../server/*.cpp)
+file(GLOB_RECURSE CLIENT ../client/*.cpp)
+file(GLOB_RECURSE EDITOR ../editor/*.cpp)
+file(GLOB_RECURSE COMMON ../common/*.cpp)
 
 
-add_executable(test_g test.cpp)
+
+
+
+add_executable(test_g test.cpp test_socket.cpp)
+
+target_compile_definitions(test_g PRIVATE TESTING)
 
 target_link_libraries(
   test_g
   GTest::gtest_main
+  server_lib box2d yaml-cpp common_lib Threads::Threads
+  client_lib ${SDL2PP_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${Qt5Core_LIBRARIES}
 )
 
 #add_test(test_g test_g)
