Se agrega el estado para apunte de bazooka

--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -5,3 +5,6 @@
 #Gusano
 - nombre: wwalk
   ruta: /client/game/Texturas/data/sprites/wwalk.png
+
+- nombre: wbaz
+  ruta: /client/game/Texturas/data/sprites/wwalk.png
