Ahora el gusano pestanea estando quieto

--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -3,6 +3,9 @@
 #   ruta: <ruta>
 
 #Gusano
+- nombre: WBlink
+  ruta: /client/game/Texturas/data/sprites/WBlink.png
+
 - nombre: wwalk
   ruta: /client/game/Texturas/data/sprites/WWalk.png
 
