--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -37,3 +37,6 @@
 - nombre: Background
   ruta: /client/game/Texturas/data/sprites/Background.png
 
+# Agua
+- nombre: Agua
+  ruta: /client/game/Texturas/data/sprites/agua2.png
