Se agregaron al cliente los siguientes proyectiles: Mortero Granada Verde Granada Santa Granada Roja Banana Misil de Aire
Faltan agregar:
Dinamita
Drop (fragmento)

--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -66,6 +66,6 @@
 - nombre: RedGranade
   ruta: /client/game/Texturas/data/sprites/RedGranade.png
 
-- nombre: RedGranadeDrop
-  ruta: /client/game/Texturas/data/sprites/RedGranadeDrop.png
+- nombre: Drop
+  ruta: /client/game/Texturas/data/sprites/Drop.png
 
