--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -24,7 +24,9 @@
 - nombre: WAimBan
   ruta: /client/game/Texturas/data/sprites/WAimBan.png
 
-
+- nombre: Grave
+  ruta: /client/game/Texturas/data/sprites/grave2.png
+  
 # Viga
 - nombre: Beam
   ruta: /client/game/Texturas/data/sprites/Beam.png
