--- a/server/mapas/vigasInclinadas.yaml
+++ b/server/mapas/vigasInclinadas.yaml
@@ -5,17 +5,21 @@ vigas:
     pos_y: 23.656469793572988
     angulo: 45
   - tipo: larga
-    pos_x: 28.5
-    pos_y: 18.806469793572987
+    pos_x: 19.978260869565219
+    pos_y: 28.506469793572986
     angulo: 45
   - tipo: larga
-    pos_x: 33.913043478260875
-    pos_y: 15.85
+    pos_x: 29.608695652173914
+    pos_y: 20.649999999999999
     angulo: 0
+  - tipo: corta
+    pos_x: 16.407608695652172
+    pos_y: 31.544264258884805
+    angulo: 45
 gusanos:
-  - pos_x: 31.456521739130437
-    pos_y: 17.550000000000001
+  - pos_x: 31.760869565217391
+    pos_y: 22.149999999999999
     direccion: 0
-  - pos_x: 36.326086956521735
-    pos_y: 17.300000000000001
+  - pos_x: 27.065217391304351
+    pos_y: 22.199999999999999
     direccion: 0
