--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -76,7 +76,11 @@
 # Agua
 - nombre: Agua
   ruta: /client/game/Texturas/data/sprites/agua2.png
-  
+
+# Provision
+- nombre: Provision
+  ruta: /client/game/Texturas/data/sprites/wcrate1.png
+
 # Proyectiles
 - nombre: Missile
   ruta: /client/game/Texturas/data/sprites/Missile.png
