Ya se grafica la mira (de teleport y ataque aereo)

--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -69,6 +69,10 @@
 - nombre: HUDWeapons
   ruta: /client/game/Texturas/data/sprites/HUDWeapons.png
 
+# Mira
+- nombre: Sight
+  ruta: /client/game/Texturas/data/sprites/sight.png
+
 # Fondo
 - nombre: Background
   ruta: /client/game/Texturas/data/sprites/Background.png
