--- a/server/mapas/testingEditor.yaml
+++ b/server/mapas/testingEditor.yaml
@@ -2,20 +2,24 @@ nombre: testingEditor
 vigas:
   - tipo: larga
     pos_x: 24.739130434782609
-    pos_y: 24.666160240509299
-    angulo: 360
+    pos_y: 22.173913043478262
+    angulo: 180
+  - tipo: corta
+    pos_x: 28.907608695652172
+    pos_y: 22.608695652173914
+    angulo: 180
   - tipo: larga
-    pos_x: 19.717391304347828
-    pos_y: 28.921524972589989
-    angulo: 315
-  - tipo: larga
-    pos_x: 15.456521739130435
-    pos_y: 33.871524972589988
-    angulo: 315
+    pos_x: 19.326086956521738
+    pos_y: 24.037929290292936
+    angulo: 135
+  - tipo: corta
+    pos_x: 15.755434782608695
+    pos_y: 27.007748269268035
+    angulo: 135
 gusanos:
-  - pos_x: 26.891304347826086
-    pos_y: 27.199999999999999
+  - pos_x: 23.021739130434781
+    pos_y: 23.565217391304348
     direccion: 0
-  - pos_x: 22.84782608695652
-    pos_y: 27.050000000000001
+  - pos_x: 25.195652173913047
+    pos_y: 23.521739130434781
     direccion: 0
