--- a/server/mapas/mapa2_modificado.yaml
+++ b/server/mapas/mapa2_modificado.yaml
@@ -2,64 +2,60 @@ nombre: mapa2_modificado
 vigas:
   - tipo: larga
     pos_x: 18.34782608695652
-    pos_y: 30.086956521739129
-    angulo: 0
-  - tipo: larga
-    pos_x: 24.304347826086953
     pos_y: 30.043478260869566
-    angulo: 0
+    angulo: 180
+  - tipo: larga
+    pos_x: 24.347826086956523
+    pos_y: 30.043478260869566
+    angulo: 180
   - tipo: larga
     pos_x: 29.152173913043477
     pos_y: 27.856469195822012
-    angulo: 45
+    angulo: 135
   - tipo: larga
     pos_x: 33.369565217391305
     pos_y: 23.639077891474184
-    angulo: 45
+    angulo: 135
   - tipo: larga
     pos_x: 32.673913043478265
     pos_y: 31.247773543648098
-    angulo: 45
+    angulo: 135
   - tipo: larga
     pos_x: 36.891304347826093
     pos_y: 27.030382239300273
-    angulo: 45
+    angulo: 135
   - tipo: larga
     pos_x: 41.739130434782609
     pos_y: 25.130434782608695
-    angulo: 0
+    angulo: 180
   - tipo: larga
-    pos_x: 38.391307001528531
+    pos_x: 38.347828740658969
     pos_y: 21.695652173913043
-    angulo: 0
+    angulo: 180
   - tipo: corta
     pos_x: 42.472827911376953
     pos_y: 21.695652173913043
-    angulo: 0
+    angulo: 180
   - tipo: corta
     pos_x: 43.972827911376953
     pos_y: 22.818009086277176
     angulo: 90
   - tipo: larga
-    pos_x: 27.869565217391305
-    pos_y: 33.347826086956523
-    angulo: 0
+    pos_x: 27.913043478260871
+    pos_y: 33.565217391304351
+    angulo: 180
   - tipo: larga
-    pos_x: 14.521739130434783
-    pos_y: 27.695652173913043
-    angulo: 249
-  - tipo: larga
-    pos_x: 10.739130434782609
-    pos_y: 24.891304347826086
+    pos_x: 14.17391304347826
+    pos_y: 27.739130434782609
+    angulo: 240
+  - tipo: corta
+    pos_x: 11.146739130434783
+    pos_y: 25.130434782608695
     angulo: 180
   - tipo: corta
-    pos_x: 6.8423913043478262
-    pos_y: 25.739130434782609
-    angulo: 135
-  - tipo: corta
-    pos_x: 4.8858695652173916
-    pos_y: 26.782608695652176
-    angulo: 180
+    pos_x: 19.625
+    pos_y: 32
+    angulo: 270
 gusanos:
   - pos_x: 25.152173913043477
     pos_y: 31.434782608695652
@@ -73,9 +69,6 @@ gusanos:
   - pos_x: 26.717391304347828
     pos_y: 35
     direccion: 0
-  - pos_x: 11.760869565217391
-    pos_y: 26.173913043478262
-    direccion: 0
-  - pos_x: 4.5
-    pos_y: 27.869565217391305
+  - pos_x: 11.369565217391305
+    pos_y: 26.347826086956523
     direccion: 0
