Angulos corregidos cuando se importaban y eran negativos y luego se exportaban

--- a/server/mapas/esfera_de_la_muerte.yaml
+++ b/server/mapas/esfera_de_la_muerte.yaml
@@ -5,53 +5,37 @@ vigas:
     pos_y: 21.739130434782609
     angulo: 180
   - tipo: larga
-    pos_x: 16.173913043478262
-    pos_y: 23.260869565217391
-    angulo: 150
+    pos_x: 16.782608695652172
+    pos_y: 23.826086956521738
+    angulo: 135
   - tipo: larga
-    pos_x: 12.173913043478262
-    pos_y: 27.260869565217391
-    angulo: 120
-  - tipo: larga
-    pos_x: 10.695652173913043
-    pos_y: 32.739130434782609
+    pos_x: 14.869565217391305
+    pos_y: 28.608695652173914
     angulo: 90
   - tipo: larga
-    pos_x: 12.173913043478262
-    pos_y: 38.217391304347828
-    angulo: 60
+    pos_x: 16.826086956521738
+    pos_y: 33.695652173913047
+    angulo: 45
   - tipo: larga
-    pos_x: 16.217391304347828
-    pos_y: 42.304347826086953
-    angulo: 30
-  - tipo: larga
-    pos_x: 21.478260869565219
-    pos_y: 43.652173913043477
+    pos_x: 21.608695652173914
+    pos_y: 35.695652173913047
     angulo: 0
   - tipo: larga
-    pos_x: 26.826086956521738
-    pos_y: 42.260869565217391
-    angulo: -30
+    pos_x: 26.478260869565215
+    pos_y: 33.652173913043477
+    angulo: 135
   - tipo: larga
-    pos_x: 30.739130434782609
-    pos_y: 38.304347826086953
-    angulo: -60
+    pos_x: 28.434782608695649
+    pos_y: 28.782608695652176
+    angulo: 90
   - tipo: larga
-    pos_x: 32.173913043478258
-    pos_y: 32.782608695652172
-    angulo: -90
-  - tipo: larga
-    pos_x: 30.695652173913039
-    pos_y: 27.304347826086957
-    angulo: -120
-  - tipo: larga
-    pos_x: 26.826086956521738
-    pos_y: 23.217391304347824
-    angulo: -150
+    pos_x: 26.521739130434781
+    pos_y: 23.695652173913043
+    angulo: 45
 gusanos:
-  - pos_x: 19.84782608695652
-    pos_y: 23.173913043478262
+  - pos_x: 23.5
+    pos_y: 23.130434782608695
     direccion: 0
-  - pos_x: 23.369565217391305
+  - pos_x: 20.195652173913043
     pos_y: 23.173913043478262
     direccion: 0
