Se permite elegir background en mapas

--- a/client/game/Texturas/superficies.yaml
+++ b/client/game/Texturas/superficies.yaml
@@ -94,7 +94,7 @@
 - nombre: Background2
   ruta: /Background2.png
 
-- nombre: Backgroun3
+- nombre: Background3
   ruta: /Background3.png
 
 # Agua
