se agrega trailer a la pagina y se cambia theme a Cayman

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 
 title: Worms Remake
 description: Juego multijugador en el que los jugadores controlan un pequeño ejército de gusanos fuertemente armados que se enfrentarán a muerte.
